# uhi

./: .gitattributes  .gitignore  README.md  config.yaml  index.html  main.py  mkdocs.yml  model.joblib  pyproject.toml  requirements.txt  search.html
cnn/: checkpoint.pth.tar  dataset.py  generate_patches.py  model.py  patches_generator.py  predict.py  train.py
data/: temperatures.csv
docs/: index.md
madrid/: .Rhistory  analysis.ipynb  compare_clusterings.ipynb  data.csv  data_lst.csv  diff.csv  kriging.R  lst_analysis.ipynb  madrid_downscaling.ipynb  model.joblib  raster_comparison.ipynb  uhi_get_satellite_data.ipynb  uhi_preprocessing.ipynb
models/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebooks/: compare_uhis.ipynb  evaluate_kriging_and_cnns.ipynb  mark_extreme_values.ipynb  plot_raster.ipynb  segmentation_step_1_data_preparation.ipynb  segmentation_step_2_model.ipynb  visualize_stations.ipynb  visualize_temperatures.ipynb
scripts/: 70:ee:50:7a:8d:66.csv  average_values.py  band_to_image.py  clustering.ipynb  clustering.py  compare_uhis.ipynb  coordinates_to_wgs84.py  crop.py  download.py  download_one.py  join_uhi_predictors.py  madrid_downscaling.ipynb  ndvi.py  netatmo_getmeasure.json  netatmo_getpublicdata.json  netatmo_scrapper.py  pca.py  predict_temperatures.py  preprocessing.ipynb  preprocessing.py  raster_to_rgb.py  temperature.py
search/: search_index.json
src/: average_values.py  clustering.py  compare_uhis.ipynb  coordinates_to_wgs84.py  download_cnig.py  evaluate_kriging_and_cnns.ipynb  join_uhi_predictors.py  logger_setup.py  (+7 more)
(+179 files in other folders)
